// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AnalysisForm > Snapshots > should match snapshot in empty state 1`] = `
<div
  class="rounded-xl border bg-card text-card-foreground shadow border-dashed"
  data-testid="analysis-form-empty"
>
  <div
    class="p-6 flex flex-col items-center justify-center py-12 text-center"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-file-search h-12 w-12 text-muted-foreground mb-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
      />
      <path
        d="M14 2v5a1 1 0 0 0 1 1h5"
      />
      <circle
        cx="11.5"
        cy="14.5"
        r="2.5"
      />
      <path
        d="M13.3 16.3 15 18"
      />
    </svg>
    <h3
      class="font-medium text-lg"
    >
      No file selected
    </h3>
    <p
      class="text-sm text-muted-foreground mt-1"
    >
      Upload a file to configure analysis options
    </p>
  </div>
</div>
`;

exports[`AnalysisForm > Snapshots > should match snapshot in submitting state 1`] = `
<form
  data-testid="analysis-form"
>
  <div
    class="rounded-xl border bg-card text-card-foreground shadow"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <div
        class="font-semibold tracking-tight text-lg"
      >
        Analysis Options
      </div>
      <div
        class="text-sm text-muted-foreground"
      >
        Configure how the file should be analyzed for deepfake detection
      </div>
    </div>
    <div
      class="p-6 pt-0 space-y-6"
    >
      <div
        class="space-y-2"
      >
        <label
          class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm font-medium"
        >
          Selected File
        </label>
        <div
          data-testid="file-card"
        >
          <span>
            test.mp4
          </span>
          <button
            data-testid="file-card-remove"
            disabled=""
          >
            Remove
          </button>
        </div>
      </div>
      <div
        class="flex items-center justify-between rounded-lg border p-4"
      >
        <div
          class="space-y-0.5"
        >
          <div
            class="flex items-center gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-file-text h-4 w-4 text-muted-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
              />
              <path
                d="M14 2v5a1 1 0 0 0 1 1h5"
              />
              <path
                d="M10 9H8"
              />
              <path
                d="M16 13H8"
              />
              <path
                d="M16 17H8"
              />
            </svg>
            <label
              class="text-sm leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium cursor-pointer"
              for="generate-report"
            >
              Generate PDF Report
            </label>
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            Create a detailed forensic report with findings and evidence
          </p>
        </div>
        <button
          aria-checked="true"
          aria-describedby="generate-report-desc"
          class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent shadow-sm transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
          data-disabled=""
          data-state="checked"
          disabled=""
          id="generate-report"
          role="switch"
          type="button"
          value="on"
        >
          <span
            class="pointer-events-none block h-4 w-4 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
            data-disabled=""
            data-state="checked"
          />
        </button>
        <input
          aria-hidden="true"
          checked=""
          disabled=""
          style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
          tabindex="-1"
          type="checkbox"
          value="on"
        />
      </div>
      <div
        class="flex items-center justify-between rounded-lg border p-4"
      >
        <div
          class="space-y-0.5"
        >
          <div
            class="flex items-center gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-image h-4 w-4 text-muted-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                ry="2"
                width="18"
                x="3"
                y="3"
              />
              <circle
                cx="9"
                cy="9"
                r="2"
              />
              <path
                d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
              />
            </svg>
            <label
              class="text-sm leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium cursor-pointer"
              for="generate-heatmaps"
            >
              Generate Heatmaps
            </label>
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            Create GradCAM visualizations showing detected manipulation regions
          </p>
        </div>
        <button
          aria-checked="true"
          aria-describedby="generate-heatmaps-desc"
          class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent shadow-sm transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
          data-disabled=""
          data-state="checked"
          disabled=""
          id="generate-heatmaps"
          role="switch"
          type="button"
          value="on"
        >
          <span
            class="pointer-events-none block h-4 w-4 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
            data-disabled=""
            data-state="checked"
          />
        </button>
        <input
          aria-hidden="true"
          checked=""
          disabled=""
          style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
          tabindex="-1"
          type="checkbox"
          value="on"
        />
      </div>
      <div
        class="space-y-3"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-shield h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
            />
          </svg>
          <label
            class="text-sm leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium"
          >
            Defense Level
          </label>
        </div>
        <div
          aria-required="false"
          class="grid gap-3"
          data-disabled=""
          dir="ltr"
          role="radiogroup"
          style="outline: none;"
          tabindex="-1"
        >
          <div
            class="flex items-center space-x-3 rounded-lg border p-4 cursor-pointer transition-colors hover:bg-muted/50"
          >
            <button
              aria-checked="false"
              class="aspect-square h-4 w-4 rounded-full border border-primary text-primary shadow focus:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
              data-disabled=""
              data-radix-collection-item=""
              data-state="unchecked"
              disabled=""
              id="defense-none"
              role="radio"
              tabindex="-1"
              type="button"
              value="none"
            />
            <input
              aria-hidden="true"
              disabled=""
              style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
              tabindex="-1"
              type="radio"
              value="none"
            />
            <div
              class="flex-1 space-y-0.5"
            >
              <label
                class="text-sm leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium cursor-pointer"
                for="defense-none"
              >
                None
              </label>
              <p
                class="text-xs text-muted-foreground"
              >
                Fastest processing, no adversarial defense
              </p>
            </div>
          </div>
          <div
            class="flex items-center space-x-3 rounded-lg border p-4 cursor-pointer transition-colors hover:bg-muted/50 border-primary bg-primary/5"
          >
            <button
              aria-checked="true"
              class="aspect-square h-4 w-4 rounded-full border border-primary text-primary shadow focus:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
              data-disabled=""
              data-radix-collection-item=""
              data-state="checked"
              disabled=""
              id="defense-standard"
              role="radio"
              tabindex="-1"
              type="button"
              value="standard"
            >
              <span
                class="flex items-center justify-center"
                data-disabled=""
                data-state="checked"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-circle h-3.5 w-3.5 fill-primary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                </svg>
              </span>
            </button>
            <input
              aria-hidden="true"
              checked=""
              disabled=""
              style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
              tabindex="-1"
              type="radio"
              value="standard"
            />
            <div
              class="flex-1 space-y-0.5"
            >
              <label
                class="text-sm leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium cursor-pointer"
                for="defense-standard"
              >
                Standard
              </label>
              <p
                class="text-xs text-muted-foreground"
              >
                Recommended - balances speed and accuracy
              </p>
            </div>
          </div>
          <div
            class="flex items-center space-x-3 rounded-lg border p-4 cursor-pointer transition-colors hover:bg-muted/50"
          >
            <button
              aria-checked="false"
              class="aspect-square h-4 w-4 rounded-full border border-primary text-primary shadow focus:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
              data-disabled=""
              data-radix-collection-item=""
              data-state="unchecked"
              disabled=""
              id="defense-aggressive"
              role="radio"
              tabindex="-1"
              type="button"
              value="aggressive"
            />
            <input
              aria-hidden="true"
              disabled=""
              style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
              tabindex="-1"
              type="radio"
              value="aggressive"
            />
            <div
              class="flex-1 space-y-0.5"
            >
              <label
                class="text-sm leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium cursor-pointer"
                for="defense-aggressive"
              >
                Aggressive
              </label>
              <p
                class="text-xs text-muted-foreground"
              >
                Maximum protection against adversarial attacks
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="items-center p-6 flex justify-between border-t pt-6"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground h-9 px-4 py-2"
        disabled=""
        type="button"
      >
        Clear
      </button>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground shadow hover:bg-primary/90 h-9 px-4 py-2 min-w-[140px]"
        data-testid="analysis-form-submit"
        disabled=""
        type="submit"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-loader-circle mr-2 h-4 w-4 animate-spin"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12a9 9 0 1 1-6.219-8.56"
          />
        </svg>
        Analyzing...
      </button>
    </div>
  </div>
</form>
`;

exports[`AnalysisForm > Snapshots > should match snapshot with error 1`] = `
<form
  data-testid="analysis-form"
>
  <div
    class="rounded-xl border bg-card text-card-foreground shadow"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <div
        class="font-semibold tracking-tight text-lg"
      >
        Analysis Options
      </div>
      <div
        class="text-sm text-muted-foreground"
      >
        Configure how the file should be analyzed for deepfake detection
      </div>
    </div>
    <div
      class="p-6 pt-0 space-y-6"
    >
      <div
        class="space-y-2"
      >
        <label
          class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm font-medium"
        >
          Selected File
        </label>
        <div
          data-testid="file-card"
        >
          <span>
            test.mp4
          </span>
          <button
            data-testid="file-card-remove"
          >
            Remove
          </button>
        </div>
      </div>
      <div
        class="flex items-center justify-between rounded-lg border p-4"
      >
        <div
          class="space-y-0.5"
        >
          <div
            class="flex items-center gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-file-text h-4 w-4 text-muted-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
              />
              <path
                d="M14 2v5a1 1 0 0 0 1 1h5"
              />
              <path
                d="M10 9H8"
              />
              <path
                d="M16 13H8"
              />
              <path
                d="M16 17H8"
              />
            </svg>
            <label
              class="text-sm leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium cursor-pointer"
              for="generate-report"
            >
              Generate PDF Report
            </label>
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            Create a detailed forensic report with findings and evidence
          </p>
        </div>
        <button
          aria-checked="true"
          aria-describedby="generate-report-desc"
          class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent shadow-sm transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
          data-state="checked"
          id="generate-report"
          role="switch"
          type="button"
          value="on"
        >
          <span
            class="pointer-events-none block h-4 w-4 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
            data-state="checked"
          />
        </button>
        <input
          aria-hidden="true"
          checked=""
          style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
          tabindex="-1"
          type="checkbox"
          value="on"
        />
      </div>
      <div
        class="flex items-center justify-between rounded-lg border p-4"
      >
        <div
          class="space-y-0.5"
        >
          <div
            class="flex items-center gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-image h-4 w-4 text-muted-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                ry="2"
                width="18"
                x="3"
                y="3"
              />
              <circle
                cx="9"
                cy="9"
                r="2"
              />
              <path
                d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
              />
            </svg>
            <label
              class="text-sm leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium cursor-pointer"
              for="generate-heatmaps"
            >
              Generate Heatmaps
            </label>
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            Create GradCAM visualizations showing detected manipulation regions
          </p>
        </div>
        <button
          aria-checked="true"
          aria-describedby="generate-heatmaps-desc"
          class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent shadow-sm transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
          data-state="checked"
          id="generate-heatmaps"
          role="switch"
          type="button"
          value="on"
        >
          <span
            class="pointer-events-none block h-4 w-4 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
            data-state="checked"
          />
        </button>
        <input
          aria-hidden="true"
          checked=""
          style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
          tabindex="-1"
          type="checkbox"
          value="on"
        />
      </div>
      <div
        class="space-y-3"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-shield h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
            />
          </svg>
          <label
            class="text-sm leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium"
          >
            Defense Level
          </label>
        </div>
        <div
          aria-required="false"
          class="grid gap-3"
          dir="ltr"
          role="radiogroup"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class="flex items-center space-x-3 rounded-lg border p-4 cursor-pointer transition-colors hover:bg-muted/50"
          >
            <button
              aria-checked="false"
              class="aspect-square h-4 w-4 rounded-full border border-primary text-primary shadow focus:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
              data-radix-collection-item=""
              data-state="unchecked"
              id="defense-none"
              role="radio"
              tabindex="-1"
              type="button"
              value="none"
            />
            <input
              aria-hidden="true"
              style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
              tabindex="-1"
              type="radio"
              value="none"
            />
            <div
              class="flex-1 space-y-0.5"
            >
              <label
                class="text-sm leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium cursor-pointer"
                for="defense-none"
              >
                None
              </label>
              <p
                class="text-xs text-muted-foreground"
              >
                Fastest processing, no adversarial defense
              </p>
            </div>
          </div>
          <div
            class="flex items-center space-x-3 rounded-lg border p-4 cursor-pointer transition-colors hover:bg-muted/50 border-primary bg-primary/5"
          >
            <button
              aria-checked="true"
              class="aspect-square h-4 w-4 rounded-full border border-primary text-primary shadow focus:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
              data-radix-collection-item=""
              data-state="checked"
              id="defense-standard"
              role="radio"
              tabindex="-1"
              type="button"
              value="standard"
            >
              <span
                class="flex items-center justify-center"
                data-state="checked"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-circle h-3.5 w-3.5 fill-primary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                </svg>
              </span>
            </button>
            <input
              aria-hidden="true"
              checked=""
              style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
              tabindex="-1"
              type="radio"
              value="standard"
            />
            <div
              class="flex-1 space-y-0.5"
            >
              <label
                class="text-sm leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium cursor-pointer"
                for="defense-standard"
              >
                Standard
              </label>
              <p
                class="text-xs text-muted-foreground"
              >
                Recommended - balances speed and accuracy
              </p>
            </div>
          </div>
          <div
            class="flex items-center space-x-3 rounded-lg border p-4 cursor-pointer transition-colors hover:bg-muted/50"
          >
            <button
              aria-checked="false"
              class="aspect-square h-4 w-4 rounded-full border border-primary text-primary shadow focus:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
              data-radix-collection-item=""
              data-state="unchecked"
              id="defense-aggressive"
              role="radio"
              tabindex="-1"
              type="button"
              value="aggressive"
            />
            <input
              aria-hidden="true"
              style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
              tabindex="-1"
              type="radio"
              value="aggressive"
            />
            <div
              class="flex-1 space-y-0.5"
            >
              <label
                class="text-sm leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium cursor-pointer"
                for="defense-aggressive"
              >
                Aggressive
              </label>
              <p
                class="text-xs text-muted-foreground"
              >
                Maximum protection against adversarial attacks
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center gap-2 p-3 rounded-lg bg-destructive/10 text-destructive text-sm"
        data-testid="analysis-form-error"
        role="alert"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-alert h-4 w-4 flex-shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
        <span>
          Test error
        </span>
      </div>
    </div>
    <div
      class="items-center p-6 flex justify-between border-t pt-6"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground h-9 px-4 py-2"
        type="button"
      >
        Clear
      </button>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground shadow hover:bg-primary/90 h-9 px-4 py-2 min-w-[140px]"
        data-testid="analysis-form-submit"
        type="submit"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-file-search mr-2 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
          />
          <path
            d="M14 2v5a1 1 0 0 0 1 1h5"
          />
          <circle
            cx="11.5"
            cy="14.5"
            r="2.5"
          />
          <path
            d="M13.3 16.3 15 18"
          />
        </svg>
        Analyze File
      </button>
    </div>
  </div>
</form>
`;

exports[`AnalysisForm > Snapshots > should match snapshot with file selected 1`] = `
<form
  data-testid="analysis-form"
>
  <div
    class="rounded-xl border bg-card text-card-foreground shadow"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <div
        class="font-semibold tracking-tight text-lg"
      >
        Analysis Options
      </div>
      <div
        class="text-sm text-muted-foreground"
      >
        Configure how the file should be analyzed for deepfake detection
      </div>
    </div>
    <div
      class="p-6 pt-0 space-y-6"
    >
      <div
        class="space-y-2"
      >
        <label
          class="peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-sm font-medium"
        >
          Selected File
        </label>
        <div
          data-testid="file-card"
        >
          <span>
            test.mp4
          </span>
          <button
            data-testid="file-card-remove"
          >
            Remove
          </button>
        </div>
      </div>
      <div
        class="flex items-center justify-between rounded-lg border p-4"
      >
        <div
          class="space-y-0.5"
        >
          <div
            class="flex items-center gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-file-text h-4 w-4 text-muted-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
              />
              <path
                d="M14 2v5a1 1 0 0 0 1 1h5"
              />
              <path
                d="M10 9H8"
              />
              <path
                d="M16 13H8"
              />
              <path
                d="M16 17H8"
              />
            </svg>
            <label
              class="text-sm leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium cursor-pointer"
              for="generate-report"
            >
              Generate PDF Report
            </label>
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            Create a detailed forensic report with findings and evidence
          </p>
        </div>
        <button
          aria-checked="true"
          aria-describedby="generate-report-desc"
          class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent shadow-sm transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
          data-state="checked"
          id="generate-report"
          role="switch"
          type="button"
          value="on"
        >
          <span
            class="pointer-events-none block h-4 w-4 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
            data-state="checked"
          />
        </button>
        <input
          aria-hidden="true"
          checked=""
          style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
          tabindex="-1"
          type="checkbox"
          value="on"
        />
      </div>
      <div
        class="flex items-center justify-between rounded-lg border p-4"
      >
        <div
          class="space-y-0.5"
        >
          <div
            class="flex items-center gap-2"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-image h-4 w-4 text-muted-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                ry="2"
                width="18"
                x="3"
                y="3"
              />
              <circle
                cx="9"
                cy="9"
                r="2"
              />
              <path
                d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
              />
            </svg>
            <label
              class="text-sm leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium cursor-pointer"
              for="generate-heatmaps"
            >
              Generate Heatmaps
            </label>
          </div>
          <p
            class="text-xs text-muted-foreground"
          >
            Create GradCAM visualizations showing detected manipulation regions
          </p>
        </div>
        <button
          aria-checked="true"
          aria-describedby="generate-heatmaps-desc"
          class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent shadow-sm transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
          data-state="checked"
          id="generate-heatmaps"
          role="switch"
          type="button"
          value="on"
        >
          <span
            class="pointer-events-none block h-4 w-4 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
            data-state="checked"
          />
        </button>
        <input
          aria-hidden="true"
          checked=""
          style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
          tabindex="-1"
          type="checkbox"
          value="on"
        />
      </div>
      <div
        class="space-y-3"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-shield h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
            />
          </svg>
          <label
            class="text-sm leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium"
          >
            Defense Level
          </label>
        </div>
        <div
          aria-required="false"
          class="grid gap-3"
          dir="ltr"
          role="radiogroup"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class="flex items-center space-x-3 rounded-lg border p-4 cursor-pointer transition-colors hover:bg-muted/50"
          >
            <button
              aria-checked="false"
              class="aspect-square h-4 w-4 rounded-full border border-primary text-primary shadow focus:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
              data-radix-collection-item=""
              data-state="unchecked"
              id="defense-none"
              role="radio"
              tabindex="-1"
              type="button"
              value="none"
            />
            <input
              aria-hidden="true"
              style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
              tabindex="-1"
              type="radio"
              value="none"
            />
            <div
              class="flex-1 space-y-0.5"
            >
              <label
                class="text-sm leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium cursor-pointer"
                for="defense-none"
              >
                None
              </label>
              <p
                class="text-xs text-muted-foreground"
              >
                Fastest processing, no adversarial defense
              </p>
            </div>
          </div>
          <div
            class="flex items-center space-x-3 rounded-lg border p-4 cursor-pointer transition-colors hover:bg-muted/50 border-primary bg-primary/5"
          >
            <button
              aria-checked="true"
              class="aspect-square h-4 w-4 rounded-full border border-primary text-primary shadow focus:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
              data-radix-collection-item=""
              data-state="checked"
              id="defense-standard"
              role="radio"
              tabindex="-1"
              type="button"
              value="standard"
            >
              <span
                class="flex items-center justify-center"
                data-state="checked"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-circle h-3.5 w-3.5 fill-primary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="10"
                  />
                </svg>
              </span>
            </button>
            <input
              aria-hidden="true"
              checked=""
              style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
              tabindex="-1"
              type="radio"
              value="standard"
            />
            <div
              class="flex-1 space-y-0.5"
            >
              <label
                class="text-sm leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium cursor-pointer"
                for="defense-standard"
              >
                Standard
              </label>
              <p
                class="text-xs text-muted-foreground"
              >
                Recommended - balances speed and accuracy
              </p>
            </div>
          </div>
          <div
            class="flex items-center space-x-3 rounded-lg border p-4 cursor-pointer transition-colors hover:bg-muted/50"
          >
            <button
              aria-checked="false"
              class="aspect-square h-4 w-4 rounded-full border border-primary text-primary shadow focus:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50"
              data-radix-collection-item=""
              data-state="unchecked"
              id="defense-aggressive"
              role="radio"
              tabindex="-1"
              type="button"
              value="aggressive"
            />
            <input
              aria-hidden="true"
              style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
              tabindex="-1"
              type="radio"
              value="aggressive"
            />
            <div
              class="flex-1 space-y-0.5"
            >
              <label
                class="text-sm leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 font-medium cursor-pointer"
                for="defense-aggressive"
              >
                Aggressive
              </label>
              <p
                class="text-xs text-muted-foreground"
              >
                Maximum protection against adversarial attacks
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="items-center p-6 flex justify-between border-t pt-6"
    >
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground h-9 px-4 py-2"
        type="button"
      >
        Clear
      </button>
      <button
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground shadow hover:bg-primary/90 h-9 px-4 py-2 min-w-[140px]"
        data-testid="analysis-form-submit"
        type="submit"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-file-search mr-2 h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
          />
          <path
            d="M14 2v5a1 1 0 0 0 1 1h5"
          />
          <circle
            cx="11.5"
            cy="14.5"
            r="2.5"
          />
          <path
            d="M13.3 16.3 15 18"
          />
        </svg>
        Analyze File
      </button>
    </div>
  </div>
</form>
`;
